# thepeg

./: .checkcmd  .cvsignore  .hgignore  .hgsub  .hgsubstate  .hgtags  AUTHORS  ChangeLog  GUIDELINES  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  auto.pl  configure  configure.ac  quiet.pl  subst.sh
Analysis/: AIDA_helper.h  FactoryBase.cc  FactoryBase.fh  FactoryBase.h  GraphvizPlot.cc  GraphvizPlot.h  HIHepMCFile.cc  HIHepMCFile.h  HepMCFile.cc  HepMCFile.h  LWHFactory.cc  LWHFactory.h  Makefile.am  Makefile.in  NLOHepMCFile.cc  NLOHepMCFile.h  NLORivetAnalysis.cc  NLORivetAnalysis.h  ProgressLog.h  RivetAnalysis.cc  RivetAnalysis.h  XSecCheck.h
Ariadne/: .cvsignore  .hgignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  m4
Cuts/: Cuts.cc  Cuts.fh  Cuts.h  DeltaMeasureCuts.cc  DeltaMeasureCuts.h  FastJetFinder.cc  FastJetFinder.h  FuzzyTheta.cc  FuzzyTheta.h  JetCuts.cc  JetCuts.h  JetFinder.cc  JetFinder.h  JetPairRegion.cc  JetPairRegion.h  JetRegion.cc  JetRegion.h  KTClus.cc  KTClus.h  KTRapidityCut.h  Makefile.am  Makefile.in  MultiCutBase.cc  MultiCutBase.h  MultiJetRegion.cc  MultiJetRegion.h  NJetsCut.cc  NJetsCut.h  OneCutBase.cc  OneCutBase.h  OneJetCut.cc  OneJetCut.h  SimpleDISCut.cc  SimpleDISCut.h  SimpleKTCut.cc  SimpleKTCut.h  TwoCutBase.cc  TwoCutBase.h  V2LeptonsCut.cc  V2LeptonsCut.h
EventRecord/: Collision.cc  Collision.h  Collision.tcc  ColourBase.cc  ColourBase.h  ColourLine.cc  ColourLine.h  ColourSinglet.cc  ColourSinglet.h  Event.cc  Event.h  EventConfig.cc  EventConfig.h  EventInfoBase.cc  EventInfoBase.h  HelicityVertex.cc  HelicityVertex.h  Makefile.am  Makefile.in  MultiColour.cc  MultiColour.h  Particle.cc  Particle.h  Particle.tcc  ParticleTraits.h  RemnantParticle.cc  RemnantParticle.fh  RemnantParticle.h  RhoDMatrix.h  SelectorBase.h  SpinInfo.cc  SpinInfo.h  StandardSelectors.h  Step.cc  Step.h  Step.tcc  SubProcess.cc  SubProcess.h  SubProcess.tcc  SubProcessGroup.cc  (+2 more)
Handlers/: ACDCSampler.cc  ACDCSampler.h  AnalysisHandler.cc  AnalysisHandler.h  CascadeHandler.cc  CascadeHandler.h  ClusterCollapser.cc  ClusterCollapser.fh  ClusterCollapser.h  DecayHandler.cc  DecayHandler.h  EventHandler.cc  EventHandler.h  EventManipulator.cc  EventManipulator.h  FixedCMSLuminosity.cc  FixedCMSLuminosity.h  FixedTargetLuminosity.cc  FixedTargetLuminosity.h  FlavourGenerator.cc  FlavourGenerator.h  GaussianPtGenerator.cc  GaussianPtGenerator.h  HadronizationHandler.cc  HadronizationHandler.h  HandlerBase.cc  HandlerBase.h  HandlerGroup.cc  HandlerGroup.h  HandlerGroup.tcc  Hint.cc  Hint.h  LastXCombInfo.h  LuminosityFunction.cc  LuminosityFunction.h  Makefile.am  Makefile.in  MultipleInteractionHandler.cc  MultipleInteractionHandler.h  PtGenerator.cc  (+23 more)
Helicity/: FermionSpinInfo.cc  FermionSpinInfo.h  HelicityDefinitions.h  HelicityFunctions.h  LorentzPolarizationVector.h  LorentzRSSpinor.cc  LorentzRSSpinor.fh  LorentzRSSpinor.h  LorentzRSSpinor.tcc  LorentzRSSpinorBar.cc  LorentzRSSpinorBar.fh  LorentzRSSpinorBar.h  LorentzRSSpinorBar.tcc  LorentzSpinor.cc  LorentzSpinor.fh  LorentzSpinor.h  LorentzSpinor.tcc  LorentzSpinorBar.cc  LorentzSpinorBar.h  LorentzSpinorBar.tcc  LorentzTensor.cc  LorentzTensor.fh  LorentzTensor.h  LorentzTensor.tcc  Makefile.am  Makefile.in  RSFermionSpinInfo.cc  RSFermionSpinInfo.h  ScalarSpinInfo.cc  ScalarSpinInfo.h  TensorSpinInfo.cc  TensorSpinInfo.fh  TensorSpinInfo.h  VectorSpinInfo.cc  VectorSpinInfo.fh  VectorSpinInfo.h  epsilon.h
Interface/: ClassDocumentation.cc  ClassDocumentation.fh  ClassDocumentation.h  Command.cc  Command.fh  Command.h  Command.tcc  Command.xh  Deleted.cc  Deleted.h  Interface.h  InterfaceBase.cc  InterfaceBase.fh  InterfaceBase.h  InterfaceBase.xh  Interfaced.cc  Interfaced.h  InterfacedBase.cc  InterfacedBase.h  InterfacedBase.xh  Makefile.am  Makefile.in  ParVector.cc  ParVector.h  ParVector.tcc  ParVector.xh  Parameter.cc  Parameter.fh  Parameter.h  Parameter.tcc  Parameter.xh  RefVector.cc  RefVector.fh  RefVector.h  RefVector.tcc  RefVector.xh  Reference.cc  Reference.h  Reference.tcc  Reference.xh  (+5 more)
LesHouches/: LesHouches.h  LesHouchesEventHandler.cc  LesHouchesEventHandler.h  LesHouchesFileReader.cc  LesHouchesFileReader.fh  LesHouchesFileReader.h  LesHouchesReader.cc  LesHouchesReader.fh  LesHouchesReader.h  MadGraphOneCut.cc  MadGraphOneCut.h  MadGraphReader.cc  MadGraphReader.h  MadGraphTwoCut.cc  MadGraphTwoCut.h  Makefile.am  Makefile.in
MatrixElement/: Amplitude.cc  Amplitude.h  BlobDiagram.cc  BlobDiagram.h  BlobMEBase.cc  BlobMEBase.h  ColourLines.cc  ColourLines.h  ColourLines.xh  DiagramBase.cc  DiagramBase.fh  DiagramBase.h  DiagramBase.xh  ME2to2Base.cc  ME2to2Base.h  ME2to2QCD.cc  ME2to2QCD.h  MEBase.cc  MEBase.h  MEGG2GG.cc  MEGG2GG.h  MEGG2QQ.cc  MEGG2QQ.h  MEGroup.cc  MEGroup.fh  MEGroup.h  MENCDIS.cc  MENCDIS.h  MEQG2QG.cc  MEQG2QG.h  MEQQ2GG.cc  MEQQ2GG.h  MEQQ2QQ3.cc  MEQQ2QQ3.h  MEQQ2qq2.cc  MEQQ2qq2.h  MEQq2Qq4.cc  MEQq2Qq4.h  MEee2gZ2qq.cc  MEee2gZ2qq.h  (+13 more)
PDF/: BeamParticleData.cc  BeamParticleData.h  BeamParticleData.xh  BudnevPDF.cc  BudnevPDF.h  GRV94L.cc  GRV94L.h  GRV94M.cc  GRV94M.h  GRVBase.cc  GRVBase.h  LHAPDF6.cc  LHAPDF6.h  LeptonLeptonPDF.cc  LeptonLeptonPDF.h  Makefile.am  Makefile.in  NoPDF.cc  NoPDF.h  NoRemnants.cc  NoRemnants.h  PDF.fh  PDF.h  PDFBase.cc  PDFBase.h  PDFBase.xh  PDFCuts.cc  PDFCuts.h  PDFsets.index  PartonBin.cc  PartonBin.h  PartonBinInstance.cc  PartonBinInstance.h  PartonExtractor.cc  PartonExtractor.h  PartonExtractor.xh  PolarizedBeamParticleData.cc  PolarizedBeamParticleData.h  RemnantHandler.cc  RemnantHandler.h  (+6 more)
PDT/: BreitWignerMass.cc  BreitWignerMass.h  ColourPairDecayer.cc  ColourPairDecayer.h  CombinedMatcher.h  ConstituentParticleData.cc  ConstituentParticleData.h  DalitzDecayer.cc  DalitzDecayer.h  DecayMode.cc  DecayMode.h  DecayMode.xh  Decayer.cc  Decayer.h  DummyDecayer.cc  DummyDecayer.h  EnumParticles.h  FlatDecayer.cc  FlatDecayer.h  Makefile.am  Makefile.in  MassGenerator.cc  MassGenerator.h  Matcher.cc  Matcher.h  Matcher.tcc  MatcherBase.cc  MatcherBase.h  (+30 more)
(+3928 files in other folders)
